examples/failing/Object.purs
module Main where

test o = o.foo

test1 = test {}
